# Dual-Filter-Safety-Critical-Control-in-real-test-environment-

./: README.md
src/lidar_odom_from_scratch/: CMakeLists.txt  Dockerfile  package.xml
src/lidar_odom_from_scratch/config/: plicp_odometry.yaml
src/lidar_odom_from_scratch/include/lidar_odom_from_scratch/: plicp_odometry.h
src/lidar_odom_from_scratch/launch/: lidar_odom.launch.py
src/lidar_odom_from_scratch/src/: lidar_odom_from_scratch_node.cpp
src/move_obs_avoidence/: package.xml  setup.cfg  setup.py
src/move_obs_avoidence/move_obs_avoidence/: move_obs_avoidence_node.py
src/path_following_with_obstacles/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/path_following_with_obstacles/path_following_with_obstacles/: elliptical_path_following_typeII-d-zcbfs_avoidence.py  path_generator.py  path_rviz_visualizer.py
src/pointcloud_handle/: CMakeLists.txt  package.xml
src/pointcloud_handle/include/pointcloud_handle/: obs_circle_rviz.hpp  obs_pcl_circle.hpp
src/pointcloud_handle/src/: obs_circle_rviz.cpp  obs_pcl_circle.cpp  obs_pcl_filter.cpp  obs_pcl_filter.hpp
src/preprocessing/: package.xml  setup.cfg  setup.py
src/preprocessing/preprocessing/: preprocessing_node.py
src/sod_launch/: package.xml  setup.cfg  setup.py
src/sod_launch/sod_launch/: obs_pcl_handel.launch.py  path_following_preparing.launch.py  preparing_sod.launch.py
src/sod_mds/: CMakeLists.txt  package.xml
src/sod_mds/src/: MBS.cpp  sod_mbs.hpp  sod_mbs_node.cpp  sod_ws.code-workspace
